# exam-manager

exam_manager/: README.md  main.py  pyproject.toml  secret.key  structure.ini
exam_manager/core/: grading_system.py  main_yolo.py  page_yolo_pipline.py  pdf_processing.py  qr_encode.py
exam_manager/ui/: __init__.py  exam_config.json  exam_config.py  main_window.py  settings_dialog.py
exam_manager/utils/: deskew_image.py  detection_pipline_processes.py  helpers.py  key.py  pdf.py
generator/: newgen.html  styles.css
